# ai_server

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.llama  Dockerfile.ollama  Dockerfile.withCuda  compile.sh  cpp.py  dns.py  docker-compose.yml  env_example.py  inference.py  model_server.py  model_server.sh  outbound_test.py  prometheus.yml  pyproject.toml  readme.md  requirements.txt  server.py  tests.py  vision.py  worker.py
grafana/provisioning/dashboards/: app-metrics.json  dashboard.yml
grafana/provisioning/datasources/: datasource.yml
jsonz/: extractor.py  readme.md  test.py  validator.py
nginx/: nginx.conf.example
protoypes/: minicpm.py  qwen.py
tests/: test_img.py  tests.py
vision/: cpp.py  cpp_o.py  handler.py  install.py  ollama.py
