[tool.poetry]
package-mode=false

[project]
name = "minicpm"
version = "0.1.0"
description = ""
authors = [
    {name = "Marin"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "peft (>=0.15.2,<0.16.0)",
    "timm (>=1.0.15,<2.0.0)",
    "torchvision (>=0.22.1,<0.23.0)",
    "torch (>=2.7.1,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "torchaudio (>=2.7.1,<3.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "vector-quantize-pytorch @ git+https://github.com/lucidrains/vector-quantize-pytorch.git",
    "vocos (>=0.1.0,<0.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
