[project]
name = "ai_server"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.12",
    "filetype>=1.2.0",
    "huggingface-hub>=0.32.6",
    "prometheus-fastapi-instrumentator>=7.1.0",
    "pydantic>=2.11.5",
    "redis>=6.2.0",
    "requests>=2.32.3",
    "rq>=2.3.3",
    "uvicorn>=0.34.3",
]
